--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Bite Size</string>
-    <string name="title_activity_home">Home</string>
+    <string name="app_name">Food Delivery</string>
+    <string name="title_activity_home">Trang chủ</string>
     <string name="slogan1">For all your cravings.</string>
     <string name="slogan2">Love at first bite...</string>
     <string name="slogan3">A bite of home.</string>
@@ -27,8 +27,8 @@
     <string name="home_second">Home Second</string>
     <string name="food_name">Food Name</string>
     <string name="_1000">\u20B91000</string>
-    <string name="total">Total : </string>
-    <string name="place_order">Place Order</string>
-    <string name="select_item_size">Select item size</string>
-    <string name="clear_cart">Clear Cart</string>
+    <string name="total">Tổng cộng : </string>
+    <string name="place_order">Thanh toán</string>
+    <string name="select_item_size">Chọn size</string>
+    <string name="clear_cart">Xóa</string>
 </resources>
