--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,13 @@
     <string name="place_order">Thanh toán</string>
     <string name="select_item_size">Chọn size</string>
     <string name="clear_cart">Xóa</string>
+    <string name="txt_order_completed">Đơn hàng đã giao thành công</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txt_description_rate">Nội dung đánh giá:</string>
+    <string name="txt_dont_have_rating">Chưa có đánh giá nào</string>
+    <string name="txt_rating_title">Nội dung đánh giá</string>
+    <string name="txt_close">Đóng</string>
+    <string name="txt_rating">Đánh giá</string>
+    <string name="txt_view_detail">Xem nội dung</string>
 </resources>
